# P2PFileExchange

./: CMakeLists.txt  README.md
code/: util.h
code/DataStorage/: util.h
code/FileIndexServer/: IndexServer.cpp  IndexServer.h  MainServer.cpp  Makefile  NewPeerDTO.h  PeerFileDTO.h  RunIndexServer.cpp  a.out  util.h
code/FileIndexServer/FileMapper/: FileMapper.h
code/FileIndexServer/FileMapping/: File.h  FileDTO.h  FileIndex.cpp  FileIndex.h  FileInfo.cpp  FileInfo.h  KMP.h  NewPeerDTO.h  PeerFileInfo.h  PeerInfo.h  PeerInfoDTO.h  Trie.h
code/FileRequester/: FileFinder.cpp  PeerFileInfo.h
code/Hash/: HashGenerator.h
code/IndexServer/: Makefile  RunIndexServer.cpp
code/IndexServer/FileMapping/: FileDTO.h  FileIndex.h  FileInfo.h  PeerFileInfo.h
code/Network/: Makefile  TCPServer.cpp  TCPServer.h  a.out  test.cpp  util.h
code/PeerClient/: AddPeer.h  Makefile  NewPeerDTO.h  PeerFileDTO.h  PeerInfo.h  PeerServer.cpp  PeerServer.h  RunPeer.cpp  Server.cpp  TestAddPeer.cpp  TestFindFile.cpp  a.out  fileReader.cpp  fileReader.h  server  unitTests.cpp
code/PeerClient/FileExchange/: FileExchange.h  FileRequestDTO.h  HashedFile.h  PeerServer.cpp  PeerServer.h
code/PeerClient/FileFinder/: FileFinder.cpp  FileInfo.cpp  FileInfo.h  Makefile  PeerInfo.h  a.out  index.html
code/PeerClient/FileReader/: fileReader.cpp  makefile
code/PeerClient/UserListener/: UserListener.h
code/PeerServer/: File.h
code/PeerServer/FileExchange/: FileRequestDTO.h  PeerServer.h
code/UserInterface/: RunP2P.py
src/: constants.h  util.h
src/common/: Server.h  TCPServer.cpp
src/common/bytestream/: ByteStream.h  TCPStream.cpp
src/common/descriptor/: FileDescriptor.cpp  FileLocation.cpp  IndexedFileDescriptor.cpp  PeerDescriptor.cpp  SearchResult.cpp
src/common/dto/: AddPeerDTO.cpp  DownloadFileChunkDTO.cpp  FileRequestDTO.cpp  FileSearchDTO.cpp  RemovePeerDTO.cpp  SearchResultDTO.cpp
src/common/fileinfo/: CommonFileInfo.h
src/common/server/: Server.h  TCPServer.cpp
src/dto/: AddPeerDTO.cpp  DownloadFileChunkDTO.cpp  DownloadFileDTO.cpp  FileDTO.cpp  FileRequestDTO.cpp  FileSearchDTO.cpp  NewPeerDTO.cpp  PeerFileInfoDTO.cpp  RemovePeerDTO.cpp  RequestFileDTO.cpp  SearchFileDTO.cpp
src/index/: IndexServer.cpp  Makefile  README.md  main.cpp
src/index/dto/: FileDTO.cpp  NewPeerDTO.cpp
src/index/file/: FileInfo.cpp  PeerFileInfo.cpp
src/index/fileindex/: FileIndex.cpp  FileIndex.h
src/index/heartbeat/: HeartbeatManager.cpp
src/index/server/: IndexServer.cpp
src/logger/: ConsoleLogger.cpp  Logger.h
src/peer/: AddPeer.h  Makefile  README.md  main.cpp
src/peer/FileReader/: FileReader.cpp
src/peer/FileRequester/: Makefile
src/peer/client/: Client.h  FileFinder.cpp  FileInfo.cpp  FileInfo.h  FileReader.cpp  HashGenerator.h  Makefile  TCPClient.cpp
src/peer/config/: PeerConfig.h
src/peer/dto/: FileDTO.cpp  FileRequestDTO.cpp  PeerFileInfoDTO.cpp
src/peer/encoder/: Base64Encoder.cpp  Encoder.h
src/peer/fileinfo/: FileInfo.cpp
src/peer/hasher/: FileHasher.cpp  (+1 more)
(+18 files in other folders)
